--- a/starter/Pipfile
+++ b/starter/Pipfile
@@ -14,6 +14,6 @@ autopep8 = "*"
 python_version = "3.8"
 
 [scripts]
-server = "python manage.py runserver"
+server = "python manage.py runserver 8080"
 migrations = "python manage.py makemigrations dog_shelters"
 migrate = "python manage.py migrate"
